# FeedbackAnalyzer_07

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cursor AI_퀴즈 - 문제.docx  README.md  SESSION_NOTES.md  STATUS_SNAPSHOT.md  TODO.md
.claude/: settings.local.json
docs/: alignment.md  analysis-global-state.md  analysis-main-coupling.md  analysis-refactoring-priority.md  analysis.md  b07-branch-workflow.md  bug_fix.md  build-and-test.md  feature.md  final.md  phase-0_spec-summary.md  phase-1_red-summary.md  phase-2_green-summary.md  phase-3_refactor-summary.md  phase-4_feature-summary.md  phase-5_final-summary.md  project-progress-summary.md  refactoring.md
prompts/: INDEX.md
prompts/phase-0_spec/: spec-01-01_define_b07_branch_workflow-prompt.md  spec-01-02_document_build_and_test_commands-prompt.md  spec-01-03_align_project_instructions-prompt.md  spec-02-01_add_architecture_analysis-prompt.md  spec-02-02_analyze_global_state_risks-prompt.md  spec-02-03_analyze_main_coupling-prompt.md  spec-02-04_prioritize_refactoring_targets-prompt.md
prompts/phase-1_red/: red-01-01_configure_gtest_target-prompt.md  red-01-02_add_text_analyzer_fixture-prompt.md  red-01-03_reset_constants_and_session_per_test-prompt.md  red-01-04_enforce_descriptive_test_names-prompt.md  red-02-01_add_empty_input_boundary_test-prompt.md  red-02-02_add_special_character_input_test-prompt.md  red-02-03_add_mixed_sentiment_input_test-prompt.md  red-02-04_add_neutral_filter_test-prompt.md  red-02-05_add_filter_combination_tests-prompt.md  red-02-06_add_session_isolation_test-prompt.md
prompts/phase-2_green/: green-01-01_correct_neutral_filter_condition-prompt.md  green-01-02_support_multiline_feedback_input-prompt.md  green-01-03_add_runtime_log_level_control-prompt.md  green-01-04_reset_shared_state_in_tests-prompt.md  green-02-01_add_bug_fix_report-prompt.md  green-02-02_record_bug_verification_logs-prompt.md  green-02-03_verify_green_regression_suite-prompt.md
prompts/phase-3_refactor/: refactor-01-01_rename_sent_to_analyzesentiment-prompt.md  refactor-01-02_rename_kw_to_analyzekeywords-prompt.md  refactor-01-03_rename_fil_to_applyfilter-prompt.md  refactor-01-04_extract_sentiment_labels-prompt.md  refactor-01-05_extract_score_constants-prompt.md  refactor-03-06_add_refactoring_report-prompt.md  (+12 more)
refs/: project_purpose.md
reports/: .gitkeep
tests/: FileHandlerTest.cpp  SmokeTest.cpp  TextAnalyzerTest.cpp
(+110 files in other folders)
